# solubility

./: .gitignore  .~lock.solvents.csv#  Cargo.toml  README.md  drug_list.csv  out.csv  res.csv  results.csv  solvents.csv
data/: drug_list.csv
src/: lib.rs  main.rs
