[package]
name = "hansen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
rayon = "1.6.1"
nalgebra = "0.31.4"
serde = {version="1.0", features = ["derive"]}
bincode = "1.3.3"
log = "0.4.17"
float-cmp = "0.9.0"
approx = "0.5.1"
env_logger = "0.10.0"
clap = "4.1.9"